<resources>
    <string name="app_name">TaskDay1Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_todoList">TodoList</string>
    <string name="title_addTodo">AddTodo</string>
    <string name="title_otherOperations">Other Ops</string>
    <string name="tap_to_add_a_todo">Tap to add a todo</string>
    <string name="enter_details_to_add_a_todo">Enter details to add a todo</string>
    <string name="name_of_todo">Enter name</string>
    <string name="number_priority">Priority in number</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="Update_details_to_add_a_todo">Update details of todo</string>
    <string name="date_of_todo">Date of todo</string>
</resources>